Fixed issue with contact page on mobile

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,8 @@ body{
 
 
 #SocialMediaArea{
-    max-width: 1000px;
+    max-width: 45em;
+    width: auto;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
@@ -102,6 +103,7 @@ body{
     padding-right: 20px;
     margin-bottom: 80px;
     color: #fff;
+    overflow: hidden;
 }
 
 #SocialMediaArea a{
@@ -109,15 +111,15 @@ body{
 }
 
 .SocialMediaBox{
-    width: 21.25%;
+    width: 10em;
     height: auto;
     float: left;
-    margin-right: 5%;
-    margin-bottom: 40px;
-    margin-top: 20px;
+    margin-right: 1em;
+    margin-bottom: 1em;
+    margin-top: 1em;
     text-align: center;
     background-color: #fff;
-    padding: 10px;
+    padding: 0.2em;
     border-radius: 5px;
     color: #000;
 }
@@ -125,7 +127,7 @@ body{
 .SocialMediaBox p{
     height:27px;
     text-align: center;
-    font-size: 100%;
+    font-size: 1em;
     line-height: 50px;
 }
 
@@ -142,19 +144,6 @@ body{
 .navbar-dark .navbar-toggler{
     border: none;
     color: white;
-}
-
-.Banner
-{
-    width: 100%;
-    height: 250px;
-}
-
-.Banner img
-{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
 }
 
 .Footer{
@@ -182,13 +171,14 @@ body{
     margin-right: auto; 
     color: white;
     font-size: 20px;
+    padding: 0.5em;
 }
 
 #TwitterFeed{
     float: left;
     width: 60%;
     height: 600px;
-    padding: 10px;
+    padding: 0.2em;
     background-color: #fff;
     border-radius: 5px;
     padding-bottom: -0px;
@@ -237,4 +227,16 @@ body{
     width: 100%;
     height: 400px;
     background-color: rgba(255, 255, 255, 0.5)
+}
+
+#ContactBanner{
+    width:100%;
+    height: 10em;
+}
+
+#ContactBanner img
+{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
 }
